# ChangeLog for net-nds/389-admin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -389-admin-1.1.8.ebuild:
  delete old revision

  07 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  389-admin-1.1.8-r1.ebuild:
  clean depend version

  24 Aug 2009; Mario Fetka <mario.fetka@gmail.com>
  -files/389-adminutil.patch, -389-admin-1.1.7.ebuild,
  -files/389-admin-1.1.7-389-adminutil-1.patch, 389-admin-1.1.8.ebuild,
  -files/fedora-ds-admin-cvs.sh:
  add my mirror for the package

  23 Jul 2009; Mario Fetka <mario.fetka@gmail.com>
  files/389-adminutil.patch:
  correct patch 2nd try

  23 Jul 2009; Mario Fetka <mario.fetka@gmail.com>
  +files/389-adminutil.patch, 389-admin-1.1.8.ebuild:
  correct patch

  23 Jul 2009; Mario Fetka <mario.fetka@gmail.com> 389-admin-1.1.8.ebuild:
  correct config flag

*389-admin-1.1.8 (23 Jul 2009)

  23 Jul 2009; Mario Fetka <mario.fetka@gmail.com> +389-admin-1.1.8.ebuild:
  Bump

*389-admin-1.1.7 (21 May 2009)

  21 May 2009; Mario Fetka <mario.fetka@gmail.com> +389-admin-1.1.7.ebuild,
  -fedora-ds-admin-1.1.7-r1.ebuild,
  +files/389-admin-1.1.7-389-adminutil-1.patch:
  rename package

*fedora-ds-admin-1.1.7-r1 (21 May 2009)

  21 May 2009; Mario Fetka <mario.fetka@gmail.com>
  -fedora-ds-admin-1.1.5-r2.ebuild, -fedora-ds-admin-1.1.6.ebuild,
  -fedora-ds-admin-1.1.6-r1.ebuild, -fedora-ds-admin-1.1.7.ebuild,
  +fedora-ds-admin-1.1.7-r1.ebuild:
  correct dependencies & wait for correct download

  07 Apr 2009; Mario Fetka <mario.fetka@gmail.com>
  +fedora-ds-admin-1.1.7.ebuild:
  Bump upstream

  13 Feb 2009; Mario Fetka <mario.fetka@gmail.com>
  +fedora-ds-admin-1.1.6-r1.ebuild:
  Bump

  13 Feb 2009; Mario Fetka <mario.fetka@gmail.com> files/dirsrv-admin.initd:
  correct output of init script

  13 Feb 2009; Mario Fetka <mario.fetka@gmail.com> +files/restart-ds-admin,
  +files/start-ds-admin, +files/stop-ds-admin, fedora-ds-admin-1.1.6.ebuild: