@@ -8,5 +8,5 @@ DIST 389-admin-1.1.8.tar.bz2 1037361 RMD160 56b0cb86ce388ad8dfb4a52dbeff56e3e7cc
 DIST 389-admin-1.1.9.tar.bz2 1041465 RMD160 5801d1db3da583635cbb50b83b1ccc2b88523d7d SHA1 523d0c8b9c88c5c1c1312cc0e89ac15cd07a598c SHA256 0c33fe9f2677bcec83e73b9984dae798da4b382336e7b436db7a47c7860588be
 EBUILD 389-admin-1.1.8-r1.ebuild 1720 RMD160 331b00f2c00bbeca4412cb16f170446005d54ca1 SHA1 f9a0606da96df0e692ab99504ea4c1ed793e7b3a SHA256 b74e2ec94a561517f2f21092d5876a7dbe82264d57d97f41e9181093866bbeca
 EBUILD 389-admin-1.1.9.ebuild 1720 RMD160 331b00f2c00bbeca4412cb16f170446005d54ca1 SHA1 f9a0606da96df0e692ab99504ea4c1ed793e7b3a SHA256 b74e2ec94a561517f2f21092d5876a7dbe82264d57d97f41e9181093866bbeca
-MISC ChangeLog 3991 RMD160 04a3f0b54e1a62bf7a6d5c4730e0fb8dd04ed752 SHA1 e91945877c2ca3475c2c8ba2f08d9ca17c49b608 SHA256 68fb6eec9de1145a93d1c5f8982f102be0d87f90191569d7ed7ce81d955ad8b4
+MISC ChangeLog 4087 RMD160 8523cf93efb703cd32db3405dc55ea557d4f640f SHA1 d41759a805c3c46eb04108c00e4423ca1fddffb9 SHA256 0f38fd081f31eb76cf1caa448c920d729dadc3bc7a66987918bbf15da08a277c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
