@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +389-admin-1.1.9.ebuild:
+  version bump
+
   07 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   -389-admin-1.1.8.ebuild:
   delete old revision
